--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,4 +126,7 @@ hr:not([size])
     border: 2px solid #ced4da; 
 }
 .active {color: aqua !important;}
+.test-class {
+    padding: 10px;
+}
 /* end utilty classes*/
